update title site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- My style -->
     <link rel="stylesheet" href="assets/libraries/style.css">
 
-    <title>Resume - Sahrial</title>
+    <title>Curriculum Vitae - Sahrial</title>
 </head>
 <body>
     <!-- <header>
