Button update link to whatsapp

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="" class="contact-link">
+                        <a href="https://wa.me/6281375716322?text=Hi%20Sahrial%2C%0A%0AI%20have%20work%20for%20you!" class="contact-link">
                             <img src="assets/images/ic-wa.svg">
                             <span></span> +62 813 7571 6322
                         </a>
