--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="mailto:sahrial26@gmail.com" class="contact-link">
+                        <a href="mailto:sahrial@gmail.com?subject=New%20Job%20For%20You!&body=Hi%20Sahrial%2c%0a%0aI%20have%20work%20for%20you!" class="contact-link">
                             <img src="assets/images/ic-email.svg">
                             <span></span> sahrial26@gmail.com
                         </a>
@@ -59,7 +59,7 @@
                         </a>
                     </li>
                 </ul>
-                <a href="mailto:sahrial26@gmail.com" class="btn-connect">Let's Connect</a> 
+                <a href="mailto:sahrial26@gmail.com?subject=New%20Job%20For%20You!&body=Hi%20Sahrial%2c%0a%0aI%20have%20work%20for%20you!" class="btn-connect">Let's Connect</a> 
             </article>
         </aside>
     
