--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="shortcut icon" href="assets/images/favicon.ico" />
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:600,700|Montserrat:400,500,600,700&display=swap" rel="stylesheet">
 
