update work experiences, skills and add using stack

--- a/index.html
+++ b/index.html
@@ -83,18 +83,24 @@
             <!-- Work Experience -->
             <article id="work-experiences">
                 <div class="card">
-                    <h2>Pengalaman Kerja</h2>
+                    <h2>Work Experiences</h2>
                     <hr>
                     <section class="card-body">
                         <h3 class="title">
-                            2019 april - Oktober : Pemkab. Serdang Bedagai
+                            2019 april - Oktober : BPKA Pemkab. Serdang Bedagai
                         </h3>
-                        <p class="subtitle">Junior Web Programmer</p>
-                        <p class="description">Dikontrak dengan pemkab sergai, untuk pengerjaan aplikasi
-                            ebudgeting, earsip, einventory dan maintenance website profile.
-                            Dan sambilan kerjain proyek sistem peyuluhan di pertanian.</p>
+                        <p class="subtitle">Junior Web Developer</p>
+                        <p class="description">Kontrak kerja dengan Pemkab. Serdang Bedagai, untuk pengerjaan aplikasi lokal earsip, einventory dan maintenance Web Sistem.</p>
                     </section>
                     <section class="card-body">
+                        <h3 class="title">
+                            2019 Maret : Dinas Pertanian Serdang Bedagai
+                        </h3>
+                        <p class="subtitle">Freelance Web Developer</p>
+                        <p class="description">Bekerja freelance dengan Dinas Pertanian, develop project Wep Sistem
+                            Penyuluhan Pertanian</p>
+                    </section>
+                    <!-- <section class="card-body">
                         <h3 class="title">
                             2018 Oktober - November : Restoran Sambalo
                         </h3>
@@ -102,13 +108,13 @@
                         <p class="description">Bekerja dengan Restoran Sambalo, proyek termasuk Design Website
                             Branding Restoran, tingkatakan Post Engagement, mengelola sosial
                             media, dan membuat konten makanan.</p>
-                    </section>
+                    </section> -->
                     <section class="card-body">
                         <h3 class="title">
-                            2018 Januari - Oktober : Ouzenmart
+                            2018 Januari - November : Ouzenmart
                         </h3>
                         <p class="subtitle">Digital Marketing | Facebook Advertiser</p>
-                        <p class="description">Bekerja dengan perusahaan Startup di bidang E-commerce
+                        <p class="description">Bekerja dengan Startup di bidang E-commerce
                             Proyek termasuk Design Website, Campaign Ads, Design Ads, Copy Ads,
                             Research Targeting dan banyak lagi.</p>
                     </section>
@@ -127,8 +133,49 @@
             <!-- Education -->
             <article id="education">
                 <div class="card">
-                    <h2>Pendidikan</h2>
+                    <h2>Education & Self-Learning</h2>
                     <hr>
+                    <section class="card-body">
+                        <h3 class="title">
+                            2020 Maret - Mei : Academy Dicoding (On Learning)
+                        </h3>
+                        <p class="subtitle">Fundamental Frontend Development</p>
+                        <p class="description">Mempelajari penerapan sintaks ES6, Web Component,
+                            Build Tools, dan AJAX untuk membangun website dengan teknik yang simple, reusable, dan
+                            optimal.</p>
+                    </section>
+                    <section class="card-body">
+                        <h3 class="title">
+                            2020 Maret - Mei : Academy Dicoding
+                        </h3>
+                        <p class="subtitle">Dasar Pemograman Web</p>
+                        <p class="description">Mempelajari struktur HTML, CSS dan JavaScript untuk pembuatan
+                            website. Yang dipelajari Layout Responsif menggunakan Flexbox, Vanila Javascript, Manipulasi DOM, Web Storage dan Submission.</p>
+                    </section>
+                    <section class="card-body">
+                        <h3 class="title">
+                            2020 Maret - April : Bootcamp Indonesia Mengoding Zero To Hero
+                        </h3>
+                        <p class="subtitle">Laravel - Web Development</p>
+                        <p class="description">Learn and Build Web Development using stack Framework Laravel, memecahkan studi kasus UI/UX, Submission Real Project, collaboration using git, and how to deploy a project.</p>
+                    </section>
+                    <section class="card-body">
+                        <h3 class="title">
+                            2020 November - Februari : Online Course Buildwith Angga
+                        </h3>
+                        <p class="subtitle">Fullstack Web Developer</p>
+                        <p class="description">Learn UI/UX and Build Website Service Travels
+                            yang bisa dibeli oleh customer, using stack Framework Bootstrap and Framework Laravel.
+                            Mempelajari UX Design, UI Design, Slicing Ke developer, and Developement with Bootstrap and Framework Laravel.</p>
+                    </section>
+                    <section class="card-body">
+                        <h3 class="title">
+                            2019 Juli - September : Online Course Buildwith Angga
+                        </h3>
+                        <p class="subtitle">Fullstack Web Designer</p>
+                        <p class="description">Learn UI/UX and Build Web Frontend Toko Online using stack Framework Bootstrap,
+                            mempelajari UX Design, UI Design, User Testing, Slicing Ke developer, and Developement with Bootstrap.</p>
+                    </section>
                     <section class="card-body">
                         <h3 class="title">
                             2015 - saat ini : Universitas Potensi utama
@@ -147,7 +194,7 @@
             <!-- Skills -->
             <article id="skills">
                 <div class="card">
-                    <h2>Kemampuan & Keahlian</h2>
+                    <h2>Tool & Skills</h2>
                     <hr>
                     <section class="card-body">
                         <h3 class="title">
@@ -158,6 +205,12 @@
                     <section class="card-body">
                         <h3 class="title">
                             Whimsical
+                        </h3>
+                        <p class="subtitle">Wireframe</p>
+                    </section>
+                    <section class="card-body">
+                        <h3 class="title">
+                            Visual Studio Code
                         </h3>
                         <p class="subtitle">Wireframe</p>
                     </section>
@@ -178,6 +231,30 @@
                             Javascript
                         </h3>
                         <p class="subtitle">Interactive Website</p>
+                    </section>
+                    <section class="row">
+                        <h3 class="title">
+                            Vue.JS
+                        </h3>
+                        <p class="subtitle">Javascript Framework</p>
+                    </section>
+                    <section class="row">
+                        <h3 class="title">
+                            Bootstrap
+                        </h3>
+                        <p class="subtitle">CSS Framework</p>
+                    </section>
+                    <section class="row">
+                        <h3 class="title">
+                            Codeigniter / Laravel
+                        </h3>
+                        <p class="subtitle">PHP Framework</p>
+                    </section>
+                    <section class="row">
+                        <h3 class="title">
+                            RESTful API
+                        </h3>
+                        <p class="subtitle">Connection Data Transfer</p>
                     </section>
                 </div>
             </article>
