add code event contact

--- a/index.html
+++ b/index.html
@@ -283,5 +283,10 @@
         <p>© 2020 CV. Sahrial</p>
     </footer>
     <script src="assets/libraries/script.js"></script>
+    <script type="text/javascript">
+        document.querySelector('btn-connect').addEventListener('click', function () {
+            fbq('track', 'Contact');
+        }, false);
+    </script>
 </body>
 </html>
