fixing email address

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="mailto:sahrial@gmail.com?subject=New%20Job%20For%20You!&body=Hi%20Sahrial%2c%0a%0aI%20have%20work%20for%20you!" class="contact-link">
+                        <a href="mailto:sahrial26@gmail.com?subject=New%20Job%20For%20You!&body=Hi%20Sahrial%2c%0a%0aI%20have%20work%20for%20you!" class="contact-link">
                             <img src="assets/images/ic-email.svg">
                             <span></span> sahrial26@gmail.com
                         </a>
