Change title experience

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                     </section>
                     <section class="card-body">
                         <h3 class="title">
-                            2014 Juni - Agustus : Webmedia Training Center
+                            2014 Juni - Agustus : Prakerin Webmedia Training Center
                         </h3>
-                        <p class="subtitle">Training Web Design & Programming</p>
+                        <p class="subtitle">Web Design & Programming</p>
                         <p class="description">Mengikuti program Praktik Kerja Industri di Webmedia Training
                             Center. Kegiatan termasuk merancang Website, belajar HTML dan
                             program PHP serta mempelajari menyimpan data di MySQL.</p>
