ganti bulan selesai belajar

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <hr>
                     <section class="card-body">
                         <h3 class="title">
-                            2020 Maret - Mei : Academy Dicoding (On Learning)
+                            2020 Agustus - September : Academy Dicoding (On Learning)
                         </h3>
                         <p class="subtitle">Fundamental Frontend Development</p>
                         <p class="description">Mempelajari penerapan sintaks ES6, Web Component,
@@ -179,7 +179,7 @@
                     </section>
                     <section class="card-body">
                         <h3 class="title">
-                            2020 November - Februari : Online Course Buildwith Angga
+                            2019 September - November : Online Course Buildwith Angga
                         </h3>
                         <p class="subtitle">Fullstack Web Developer</p>
                         <p class="description">Learn UI/UX and Build Website Service Travels
