--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <section>
                     <div class="text-hero">
                         <h1>SAHRIAL</h1>
-                        <p>Junior Web Developer</p>
+                        <p>Web Developer</p>
                     </div>
                 </section>
             </article>
