change link to new domain

--- a/index.html
+++ b/index.html
@@ -61,15 +61,17 @@
                 <p>Click one of my contacts  below to say hello.</p>
                 <ul class="contact">
                     <li>
-                        <a href="https://sahrialardians.com/" target="_blank" class="contact-link">
+                        <a href="https://sahrial.com/" target="_blank" class="contact-link">
                             <img src="assets/images/ic-name.svg">
                             <span></span> Sahrial
                         </a>
                     </li>
                     <li>
-                        <a href="mailto:sahrial26@gmail.com?subject=New%20Job%20For%20You!&body=Hi%20Sahrial%2c%0a%0aI%20have%20work%20for%20you!" class="contact-link">
+                        <a 
+href="mailto:hi@sahrial.com?subject=New%20Job%20For%20You!&body=Hi%20Sahrial%2c%0a%0aI%20have%20work%20for%20you!" 
+class="contact-link">
                             <img src="assets/images/ic-email.svg">
-                            <span></span> sahrial26@gmail.com
+                            <span></span> hi@sahrial.com
                         </a>
                     </li>
                     <li>
