--- a/index.html
+++ b/index.html
@@ -67,11 +67,9 @@
                         </a>
                     </li>
                     <li>
-                        <a 
-href="mailto:hi@sahrial.com?subject=New%20Job%20For%20You!&body=Hi%20Sahrial%2c%0a%0aI%20have%20work%20for%20you!" 
-class="contact-link">
+                        <a href="mailto:sahrial26@gmail.com?subject=New%20Job%20For%20You!&body=Hi%20Sahrial%2c%0a%0aI%20have%20work%20for%20you!" class="contact-link">
                             <img src="assets/images/ic-email.svg">
-                            <span></span> hi@sahrial.com
+                            <span></span> sahrial26@gmail.com
                         </a>
                     </li>
                     <li>
@@ -107,14 +105,14 @@ class="contact-link">
                     <hr>
                     <section class="card-body">
                         <h3 class="title">
-                            2019 November - saat ini : PenyediaJasa.com
+                            2020 Januari - saat ini : PenyediaJasa.com
                         </h3>
                         <p class="subtitle">Freelance Web Developer</p>
                         <p class="description">Bekerja dengan PenyediaJasa.com project based.</p>
                     </section>
                     <section class="card-body">
                         <h3 class="title">
-                            2019 april - Oktober : BPKA Pemkab. Serdang Bedagai
+                            2019 April - Oktober : BPKA Pemkab. Serdang Bedagai
                         </h3>
                         <p class="subtitle">Tenaga Ahli Web Programmer</p>
                         <p class="description">Kontrak kerja dengan Pemkab. Serdang Bedagai, untuk pengerjaan aplikasi lokal e-asset dan maintenance Web Sistem.</p>
@@ -162,15 +160,13 @@ class="contact-link">
                 <div class="card">
                     <h2>Self-Learning</h2>
                     <hr>
-                    <!-- <section class="card-body">
+                    <section class="card-body">
                         <h3 class="title">
-                            2020 Agustus - September : Academy Dicoding (On Learning)
+                            2020 Agustus : BPPTIK KOMINFO
                         </h3>
-                        <p class="subtitle">Fundamental Frontend Development</p>
-                        <p class="description">Mempelajari penerapan sintaks ES6, Web Component,
-                            Build Tools, dan AJAX untuk membangun website dengan teknik yang simple, reusable, dan
-                            optimal.</p>
-                    </section> -->
+                        <p class="subtitle">Pelatihan Junior Web Developer</p>
+                        <p class="description">Mengimplementasikan user interface. Menulis kode dengan prinsip sesuai guidelines dan best practices. Mengimplementasikan pemrograman terstruktur. Menggunakan library atau komponen pre-existing.</p>
+                    </section>
                     <section class="card-body">
                         <h3 class="title">
                             2020 Maret - Mei : Academy Dicoding
@@ -191,9 +187,8 @@ class="contact-link">
                             2019 September - November : Online Course Buildwith Angga
                         </h3>
                         <p class="subtitle">Fullstack Web Developer</p>
-                        <p class="description">Learn UI/UX and Build Website Service Travels
-                            yang bisa dibeli oleh customer, using stack Framework Bootstrap and Framework Laravel.
-                            Mempelajari UX Design, UI Design, Slicing Ke developer, and Developement with Bootstrap and Framework Laravel.</p>
+                        <p class="description">Learn Website Booking Travel
+                            yang bisa dibeli oleh customer. Mempelajari UX Design, UI Design, Slicing Ke developer, and Developement with Bootstrap and Framework Laravel.</p>
                     </section>
                     <section class="card-body">
                         <h3 class="title">
@@ -206,7 +201,7 @@ class="contact-link">
                 </div>
             </article>
 
-            <!-- Education -->
+            <!-- Educaation -->
             <article id="education">
                 <div class="card">
                     <h2>Education</h2>
