change photo profile

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <aside>
             <article class="about">
                 <div class="image">
-                    <img class="img-profile" src="assets/images/photo_porfile.jpg" alt="Profile Sahrial">
+                    <img class="img-profile" src="assets/images/avatar.jpg" alt="Profile Sahrial">
                 </div>
                     <h2>About Me</h2>
                 <p>Click one of my contacts  below to say hello.</p>
