add meta description and keywords

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta name="description" content="Halo, ini adalah Curriculum-vitae online saya.">
+
+    <meta name="keywords" content="Curriculum-vitae Online, CV Online, Sahrial Curriculum-vitae, Programmer Medan, Jasa Programmer Medan, Developer Medan">
+
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
 
     <!-- Google Font -->
